[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enchttp"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A simple HTTP server with XOR encryption"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
enchttp = "enchttp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/enchttp"]